--- a/JwtApi/JwtApi.csproj
+++ b/JwtApi/JwtApi.csproj
@@ -6,15 +6,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
-        <PackageReference Include="Trivial" Version="2.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1"/>
+        <PackageReference Include="Trivial" Version="2.0.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="doc" />
+        <Folder Include="doc"/>N
     </ItemGroup>
+
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
 
 </Project>
