Set the comments path for the Swagger JSON and UI

--- a/JwtApi/JwtApi.csproj
+++ b/JwtApi/JwtApi.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="doc"/>N
+        <Folder Include="doc"/>
     </ItemGroup>
 
     <PropertyGroup>
